--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -10,28 +10,15 @@
     }
 
     .join-button h2 {
-        margin-top: -65%;
         margin-left: 45px;
-        position: absolute;
-        font-family: 'Roboto', sans-serif;
-        color: #FFFFFF;
         font-size: 3em;
-        text-shadow: 1px 1px 2px black, 0 0 1em #044B87, 0 0 0.2em #044B87;
     }
 
     .join-button a {
         margin-top: -10%;
         margin-left: 70%;
-        position: absolute;
-        border: none;
-        border-radius: 10px;
-        padding: 10px;
-        text-align: center;
         font-size: 25px;
         cursor: pointer;
-        color: #FFFFFF;
-        background-color: #044B87;
-        box-shadow: 0px 0px 2px 2px rgba(4, 75, 135, 0.35);
     }
 
     .news-release {
